triage-party/overlays/zero-prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: triage-party-route53
spec:
    host: triage-party.thoth-station.ninja
    to:
        kind: Service
        name: triage-party
    tls:
        caCertificate: ENC[AES256_GCM,data:7R6EVzzQyCmD4Kzpgn83dHIvO84ilEgZetNeQTrf9nTV98SGQjDEbYPGDfCpdoBvePOSm/WGca6WsVUW8km/dk0AwclvVVJrNwXY7dgY3d8LjUzwX3huGe3HOdQJCR6ZTW7ZGh9cZ5RG7ltiag7hXfaEo0CzOl6X5xFeW0qMHoPVBlEWWvDBwo57ZCj8jUF/s9Yq0FbzVkSkgPUPMMGk4UVV+bN6Qlt/r1Ohciw4WsRAQNK0uDvY2QFerXJN4MT99oHFca7why1ImCSYg6zDEoeo6Z0VK3D3YKe5+qm4coSHbzU5tLsijNnhmN23WhkG2AxRHA6+11JnpNGTxwYX4/Juj3poJnGe1emwz2Y07Xtb30eGTXOYSeNJaJEM1lAAXQswRTqgx1T5jXmPmToBs1Fg8fPJ7zfdK4fRWE42SYdWmRMZ5RcyOeO/eALgfvBGyzuavYHFA [...]
        certificate: ENC[AES256_GCM,data:oLqZcbngX5sQrKkC3evFyqp2ZLUSALKgHsW7J+Ux/eBTFfkjeVJma+vbfodBxOYE4d7nHuqnfrOrZevdxz36PBoG6LtzvmdUZm0GY1eq3uh6xeKh0S9qjd1lgDqaVVGc0EYCOlX6WvCu/0symiMqmglHl+JabsRVTHCh3anv0udDNImOQKEPxoNxjRsg1VjILxnMbI44jOP3BRKxp4c3ESmnMxIjpGBrVKZOE6nmX9f2Ed92h3Pf5Z5RnwbKL8/vM0Whrp1XCMmamk8jh9aK8UKz/7HMI/NPakMJ/W6wyKwcArlZl1OMTqqCTpgxnytvl37966lDfKbSNamA06m/d3rp/DjEaDhvxBoPrf+YW55BaDDknmPVuUI5I+irYJGvQ/1rR3rZcUtaiM/0LER8KvtPOSMnuTH6QlwlCYUmLkv7WSV1QYvNvy29hRmRCk/wJcf2B8jtJX/ [...]
        key: ENC[AES256_GCM,data:ArAKuJEyyfV2BDKrSz63aSSynp5UC5vgrunZ19uIQm4utjmS8e5yZ1LC15IAVPBlVulDP4e3ez0M4yWP1lKzIihOvavrebOS6NTaUdjgYCkIYJ4yGOYX6rOZW6mHlVjpUlM6K/NE9s1E4l3Gv5kQgn7ekhN9MUGYD7aOA+vDNzOgJmvNjK3N2iS1UraHcFbq7H7vzHR3PilB8GVOudrDA67FvMjQJWVXfiipjpbXkJZumm/MESqiK3qzKX5FB4cuCF/0xa731k5kMy5wkdAxDAKc4LX4GE25nmp3OvTK/f/cakDqEuJFBPYBH+ZJphJPEkDGGJufK8eIhQtf1dv35Cq84pSjeNd44IKVlDskUQoY/RBcZepiHLhSBPYMAexTIpFtJC68+45BLHMK7JgDgy2J46/I/a9xNNVr8g7VSI88Or4RCyTh39AeyZ59jG5LBq+8kpgvCgSnKOi6Hmi [...]
        termination: ENC[AES256_GCM,data:LKBgyA==,iv:ACTH8+mEJTO3+GVE7Tic+uL6ZYdO2Rlg647eDbmyphQ=,tag:GuwhoR4+gc3BgnQYCWokSA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-06-10T18:32:30Z'
    mac: ENC[AES256_GCM,data:H7CVyPrYdzIMbMpeUKBt9LQquYF2PJR1fDQEdYBdvqfuufil9n7dAZJDTwrr6FY1fRWYgaAaC0llzIrJJkawG5WQqJ/jYNsd+DZPIEsoxqDGiWpJG/TvkakHx3g311vsb6wQE1y3hiNO8uKd+h0/RGhZQVlIexoHWSyI7P7AwY0=,iv:e/ol7zla5B1hTzW+j8EvpUhv+6ro7N2jz8C/aW9N6tc=,tag:1Ho8ZNKY4pZsrclhtUiTWg==,type:str]
    pgp:
    -   created_at: '2021-06-10T18:32:30Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ/+M2C3QXtcKIV+M57nJyCaTF6K+kYJHJb47eNgKGC00goU
[...]
            =ir2z
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-06-10T18:32:30Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQgAk7ARxnHpHFLJiD/D8XkQDknVfmdzyHnYGWg3ET1NDf5w
[...]
            tyQDB0ikfC33FzT9isPoYftNAE0c/+vYzobb2aj0TQ==
            =B+6z
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-06-10T18:32:30Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAmSXsSLeQRX6TJGU75ITNYFUymi2oMRLfcYZGlHozbb5t
[...]
            XeqCmF1oEoZlSxd6Xfo7kfkA/krwL6ZcWs7VoXs7ug==
            =zGPx
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-06-10T18:32:30Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ/9Gq6mCQfXbKeeOnfyYOihM8W22iI4bcpijAg8Gly2F0fR
[...]
            =IPlB
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
